--- a/Solucion_Codigo/index.html
+++ b/Solucion_Codigo/index.html
@@ -36,7 +36,7 @@
 
       <!-- leftMenu (Rectangle) -->
          <div id="leftMenu" class="">
-		    <a href="Login2.html" class="Boton">LOGIN</a><br><br>
+		    <a href="FormLoginAvanzado/login2.html" class="Boton">LOGIN</a><br><br>
 			<!-- <a href="./Matriculas/index.html" class="Boton" target="_blank">MATRICULA</a>          -->
          </div>
 
